v21.07/en/_sources/interfaces.rst.txt
Interfaces

The following interfaces are provided for configuring and obtaining
data from the

rc_visard

:

Web GUI\:(Section \ref{webgui:sect-web-gui})  Easy-to-use graphical
interface to configure the rc_visard, do calibrations, view live
images, do service calls, visualize results, etc.

GigE Vision 2.0/GenICam\:(Section \ref{gigevision:sect-genicam})
Images and camera related configuration.

REST API\:(Section \ref{rest_api:sect-rest-api})  API to configure the
rc_visard, query status information, do service calls, etc.

rc_dynamics streams\:(Section \ref{rc_dynamics:sect-rc-dynamics-
interface})  Real-time streams containing state estimates with poses,
velocities, etc. are provided over the rc_dynamics interface. It sends
protobuf-encoded messages via UDP.

Ethernet KRL Interface (EKI)\:(Section \ref{eki:sect-eki})  API to
configure the rc_visard and do service calls from KUKA KSS robots.

Time synchronization\:(Section \ref{time_sync:sect-time-sync})  Time
synchronization between the rc_visard and the application host.

